--- a/logging.properties
+++ b/logging.properties
@@ -1,5 +1,2 @@
 handlers = java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.level = CONFIG
-
-# Set up logging of HTTP requests and responses (uncomment "level" to show)
-com.google.api.client.http.level = ALL
+java.util.logging.ConsoleHandler.level = ALL
