--- a/logging.properties
+++ b/logging.properties
@@ -1,2 +1,4 @@
 handlers = java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.level = ALL
+
+com.google.api.client.http.HttpTransport.level=ALL
